syntax = "proto3";

package COD.Level;

// level.proto

message Level {
  uint32 formatVersion = 1;
  string title = 2;
  string creators = 3;
  string description = 4;
  repeated string tags = 9;
  uint32 maxCheckpointCount = 7;
  uint64 defaultSpawnPointID = 10;
  bool unlisted = 11;
  bool showReplays = 12;
  uint32 complexity = 5;

  AmbienceSettings ambienceSettings = 8;

  repeated LevelNode levelNodes = 6;
}

// types.proto

message Vector {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Vector2 {
  float x = 1;
  float y = 2;
}

message Quaternion {
  float x = 1;
  float y = 2;
  float z = 3;
  float w = 4;
}

message Color {
  float r = 1;
  float g = 2;
  float b = 3;
  float a = 4;
}

message AmbienceSettings {
  Color skyZenithColor = 1;
  Color skyHorizonColor = 2;

  float sunAltitude = 3;
  float sunAzimuth = 4;
  float sunSize = 5;

  float fogDensity = 6;
}

enum LevelNodeShape {
  START = 0;
  FINISH = 1;
  SIGN = 2;
  GRAVITY = 3;
  LOBBYTERMINAL = 4;
  PARTICLE_EMITTER = 5;
  SOUND = 6;
  GASM = 7;

  __END_OF_SPECIAL_PARTS__ = 8;

  CUBE = 1000;
  SPHERE = 1001;
  CYLINDER = 1002;
  PYRAMID = 1003;
  PRISM = 1004;
  CONE = 1005;
  PYRAMIDSQUARE = 1006;

  // modded shapes
}

enum LevelNodeMaterial {
  DEFAULT = 0;
  GRABBABLE = 1;
  ICE = 2;
  LAVA = 3;
  WOOD = 4;
  GRAPPLABLE = 5;
  GRAPPLABLE_LAVA = 6;

  GRABBABLE_CRUMBLING = 7;
  DEFAULT_COLORED = 8;
  BOUNCING = 9;
  SNOW = 10;

  TRIGGER = 11;

  // modded materials
}

enum InterpolationType {
  LINEAR = 0;
  QUADRATIC_EASE_IN = 1;
  QUADRATIC_EASE_OUT = 2;
  QUADRATIC_EASE_IN_OUT = 3;
  SINUSOIDAL_EASE_IN = 4;
  SINUSOIDAL_EASE_OUT = 5;
  SINUSOIDAL_EASE_IN_OUT = 6;
  EXPONENTIAL_EASE_IN = 7;
  EXPONENTIAL_EASE_OUT = 8;
  EXPONENTIAL_EASE_IN_OUT = 9;
  CIRCULAR_EASE_IN = 10;
  CIRCULAR_EASE_OUT = 11;
  CIRCULAR_EASE_IN_OUT = 12;
  CUBIC_EASE_IN = 13;
  CUBIC_EASE_OUT = 14;
  CUBIC_EASE_IN_OUT = 15;
  QUARTIC_EASE_IN = 16;
  QUARTIC_EASE_OUT = 17;
  QUARTIC_EASE_IN_OUT = 18;
  QUINTIC_EASE_IN = 19;
  QUINTIC_EASE_OUT = 20;
  QUINTIC_EASE_IN_OUT = 21;
}

message LevelNodeGroup {
  Vector position = 1;
  Vector scale = 2;
  Quaternion rotation = 3;

  repeated LevelNode childNodes = 4;

  string name = 5;
  bool physicsObject = 6;
  bool localPhysicsObject = 7;
  float mass = 8;
}

message LevelNodeStart {
  Vector position = 1;
  Quaternion rotation = 2;
  float radius = 3;
  string name = 4;
  bool isHidden = 5;
}

message LevelNodeFinish {
  Vector position = 1;
  float radius = 2;
}

message LevelNodeStatic {
  LevelNodeShape shape = 1;
  LevelNodeMaterial material = 2;

  Vector position = 3;
  Vector scale = 4;
  Quaternion rotation = 5;

  Color color1 = 6;
  Color color2 = 9;

  bool isNeon = 7;
  bool isTransparent = 8;

  bool isGrabbable = 10;
  bool isGrapplable = 11;
  bool isPassable = 12;
}

message LevelNodeCrumbling {
  LevelNodeShape shape = 1;
  LevelNodeMaterial material = 2;

  Vector position = 3;
  Vector scale = 4;
  Quaternion rotation = 5;

  float stableTime = 6;
  float respawnTime = 7;
}

message LevelNodeSign {
  enum SignFontWeight {
    REGULAR = 0;
    LIGHT = 1;
    SEMIBOLD = 2;
    BOLD = 3;
    ITALIC = 4;
  }

  Vector position = 1;
  Quaternion rotation = 2;
  float scale = 4;

  string text = 3;
  Color color = 5;
  SignFontWeight weight = 7;
  bool hideModel = 6;
}

message LevelNodeGravity {
  enum Mode {
    DEFAULT = 0;
    NOLEGS = 1;
  }

  Mode mode = 1;

  Vector position = 2;
  Vector scale = 3;
  Quaternion rotation = 4;

  Vector direction = 5;
}

message LevelNodeLobbyTerminal {
  Vector position = 2;
  Quaternion rotation = 4;
}

message LevelNodeParticleEmitter {
  Vector position = 1;
  Vector scale = 2;
  Quaternion rotation = 3;

  uint32 particlesPerSecond = 5;

  Vector2 lifeSpan = 6;
  Color startColor = 7;
  Color endColor = 8;
  Vector2 startSize = 9;
  Vector2 endSize = 10;

  Vector velocity = 14;
  Vector velocityMin = 15;
  Vector velocityMax = 16;
  Vector accelerationMin = 17;
  Vector accelerationMax = 18;
}

message TriggerSourceBasic {
  enum Type {
    HAND = 0;
    HEAD = 1;
    GRAPPLE = 2;
    FEET = 3;
    BLOCK = 4;
  }

  Type type = 1;
}

message TriggerSourceBlockNames {
  repeated string names = 1;
}

message TriggerSource {
  oneof content {
    TriggerSourceBasic triggerSourceBasic = 1;
    TriggerSourceBlockNames triggerSourceBlockNames = 2;
  }
}

message TriggerTargetAnimation {
  enum Mode {
    STOP = 0;
    START = 1;
    TOGGLE = 2;
    TOGGLE_REVERSE = 3;
    RESTART = 4;
    RESET = 5;
  }

  uint64 objectID = 1;
  string animationName = 2;

  bool loop = 3;
  bool reverse = 4;

  Mode mode = 10;
}

message TriggerTargetSound {
  enum Mode {
    STOP = 0;
    START = 1;
    TOGGLE = 2;
    RESTART = 3;
    RESET = 4;
  }

  uint64 objectID = 1;

  Mode mode = 2;
  bool repeat = 3;
}

message TriggerTargetGASM {
  enum Mode {
    STOP = 0;
    START = 1;
    TOGGLE = 2;
    RESTART = 3;
    RESET = 4;
  }

  uint64 objectID = 1;

  Mode mode = 2;
}

message TriggerTargetSubLevel {
  string levelIdentifier = 1;
  string spawnPoint = 2;
}

message TriggerTargetAmbience {
  Color skyColor0 = 1;
  Color skyColor1 = 2;

  float sunAltitude = 3;
  float sunAzimuth = 4;
  float sunSize = 5;

  float fogDensity = 6;

  float changeDuration = 7;
  InterpolationType interpolationType = 8;
}

message TriggerTarget {
  enum Mode {
    ONENTER = 0;
    ONLEAVE = 1;
    ONENTERONLEAVE = 2;
    NONE = 3;
  }

  Mode mode = 4;

  oneof content {
    TriggerTargetAnimation triggerTargetAnimation = 1;
    TriggerTargetSubLevel triggerTargetSubLevel = 2;
    TriggerTargetSound triggerTargetSound = 3;
    TriggerTargetAmbience triggerTargetAmbience = 6;
    TriggerTargetGASM triggerTargetGASM = 7;
  }
}

message LevelNodeTrigger {
  LevelNodeShape shape = 1;

  Vector position = 2;
  Vector scale = 3;
  Quaternion rotation = 4;

  bool isShared = 5;

  repeated TriggerSource triggerSources = 6;
  repeated TriggerTarget triggerTargets = 7;
}

message SoundGeneratorParameters {
  enum WaveType {
    Square = 0;
    Sawtooth = 1;
    Sine = 2;
    Noise = 3;
  }

  float volume = 1;

  WaveType waveType = 2;

  float envelopeAttack = 3;
  float envelopeSustain = 4;
  float envelopeRelease = 5;
  float envelopePunch = 6;

  float frequencyBase = 7;
  float frequencyLimit = 8;
  float frequencyRamp = 9;
  float frequencyDeltaRamp = 10;

  float vibratoStrength = 11;
  float vibratoSpeed = 12;

  float pitchJumpMod = 13;
  float pitchJumpSpeed = 14;

  float dutyCycle = 15;
  float dutyCycleRamp = 16;

  float repeatSpeed = 17;

  float flangerFrequency = 18;
  float flangerDepth = 19;

  float lowPassFilterFrequency = 20;
  float highPassFilterFrequency = 21;

  float reverbDelay = 22;
  float reverbDecayFactor = 23;
}

message LevelNodeSound {
  Vector position = 1;
  Quaternion rotation = 7;

  SoundGeneratorParameters parameters = 2;
  string name = 3;
  bool repeat = 4;
  float volume = 5;
  bool startActive = 6;
  float maxRangeFactor = 8;
}

message LevelNodeGASM {
  message Connection {
    enum Type
    {
      NODE = 0;
      PLAYER = 1;
    }

    Type type = 4;
    uint64 objectID = 1;
    string name = 2;
    repeated ProgrammablePropertyData properties = 3;
  }

  Vector position = 1;
  Vector scale = 5;
  Quaternion rotation = 6;

  ProgramData program = 2;

  repeated Connection connections = 3;

  bool startActive = 4;
  bool isShared = 7;
}

message AnimationFrame {
  float time = 1;
  Vector position = 2;
  Quaternion rotation = 3;
}

message Animation {
  enum Direction {
    RESTART = 0;
    PINGPONG = 1;
  }

  enum Interpolation {
    LINEAR = 0;
    CATMULL_ROM = 1;
  }

  string name = 1;
  repeated AnimationFrame frames = 2;
  Direction direction = 3;
  float speed = 4;
  Interpolation interpolation = 5;
}

message LevelNode {
  bool isLocked = 6;

  oneof content {
    LevelNodeStart levelNodeStart = 1;
    LevelNodeFinish levelNodeFinish = 2;
    LevelNodeStatic levelNodeStatic = 3;
    LevelNodeSign levelNodeSign = 4;
    LevelNodeCrumbling levelNodeCrumbling = 5;
    LevelNodeGroup levelNodeGroup = 7;
    LevelNodeGravity levelNodeGravity = 8;
    LevelNodeLobbyTerminal levelNodeLobbyTerminal = 9;
    LevelNodeTrigger levelNodeTrigger = 10;
    LevelNodeParticleEmitter levelNodeParticleEmitter = 11;
    LevelNodeSound levelNodeSound = 12;
    LevelNodeGASM levelNodeGASM = 13;
  }

  repeated Animation animations = 15;
  int32 activeAnimation = 16;
  bool wantsCreationHistory = 17;
}

// MARK: gasm.proto

message OperandData {
  enum Type {
    OpInputRegister = 0;
    OpOutputRegister = 1;
    OpWorkingRegister = 2;
    OpSpecialRegister = 3;
    OpConstant = 4;
    OpLabel = 5;
    OpJumpAddress = 6;
    OpInOutRegister = 7;
  }
  Type type = 1;
  oneof content {
    uint32 index = 2;
    float value = 3;
  }
}

message InstructionData {
  enum Type {
    InNoop = 0;
    InSet = 1;
    InSwap = 2;
    InAdd = 3;
    InSub = 4;
    InMul = 5;
    InDiv = 6;
    InEqual = 7;
    InLess = 8;
    InGreater = 9;
    InAnd = 10;
    InOr = 11;
    InNot = 12;
    InLabel = 13;
    InGoto = 14;
    InIf = 15;
    InSleep = 16;
    InEnd = 17;
    InRand = 18;
    InFloor = 19;
    InMod = 20;
    InSin = 21;
    InCos = 22;
    InSqrt = 23;
    InAtan2 = 24;
  }
  Type type = 1;
  repeated OperandData operands = 2;
}

message RegisterData {
  string name = 1;
}

message LabelData {
  string name = 1;
}

message ProgramData {
  repeated RegisterData inputRegisters = 1;
  repeated RegisterData outputRegisters = 2;
  repeated RegisterData workingRegisters = 3;
  repeated RegisterData inoutRegisters = 6;

  repeated LabelData labels = 4;

  repeated InstructionData instructions = 5;
}

message ProgrammablePositionData {}

message ProgrammableRotationData {}

message ProgrammableTriggerActive {}

message ProgrammablePlayerData {}

message ProgrammableSignData {}

message ProgrammableColorData {}

message ProgrammablePropertyData {
  message Component {
    int32 inputRegisterIndex = 1;
    int32 outputRegisterIndex = 2;
    int32 inoutRegisterIndex = 3;
  }

  uint64 objectID = 1;
  repeated Component components = 2;

  oneof content {
    ProgrammablePositionData position = 3;
    ProgrammableTriggerActive triggerActive = 4;
    ProgrammableRotationData rotation = 5;
    ProgrammablePlayerData player = 6;
    ProgrammableSignData sign = 7;
    ProgrammableColorData color = 8;
  }
}

message ProgrammableSignUpdateData {
  string text = 1;
}

message ProgrammablePropertyUpdateData {
  repeated float components = 1;

  oneof content {
    ProgrammableSignUpdateData sign = 2;
  }
}

